# INF26207-TPsession

./: .gitignore  CMakeLists.txt  build.sh
client/: CMakeLists.txt  client.c  client.h
common/: common.h
lib/: include.h
server/: CMakeLists.txt  server.c  server.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.c
src/client/include/: client.h  client_functions.h  client_struct.h
src/lib/: include.h
src/server/: CMakeLists.txt  clients.c  main.c  server.c  socket.c
src/server/include/: server.h  server_functions.h  server_struct.h
